backport: re PR target/61092 (wide-int merge broke alpha bootstrap)

Backport from mainline
	2014-05-08  Uros Bizjak  <ubizjak@gmail.com>

	PR target/61092
	* config/alpha/alpha.c: Include gimple-iterator.h.
	(alpha_gimple_fold_builtin): New function.  Move
	ALPHA_BUILTIN_UMULH folding from ...
	(alpha_fold_builtin): ... here.
	(TARGET_GIMPLE_FOLD_BUILTIN): New define.

From-SVN: r210278